--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.69"
+tokio = {version = "1.25.0", features=["full"]}
+tracing = "0.1.37"
+tracing-subscriber = {version="0.3.16", features=["env-filter"]}
