--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "muservice-in-rust"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "mulib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "muservice-in-rust"
+path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
