--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.69"
+axum = "0.6.7"
+axum-macros = "0.3.4"
+hyper = "0.14.24"
+thiserror = "1.0.38"
 tokio = {version = "1.25.0", features=["full"]}
+tower-http = {version = "0.3.5", features = ["trace"]}
 tracing = "0.1.37"
 tracing-subscriber = {version="0.3.16", features=["env-filter"]}
+ulid = "1.0.0"
+
