--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,17 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow             = "1.0.69"
+async-trait        = "0.1.64"
 axum               = "0.6.7"
 axum-macros        = "0.3.4"
+chrono             = {version="0.4.23", features = ["serde"]}
 hyper              = "0.14.24"
 serde              = {version="1.0.152", features=["derive"]}
 serde_json         = "1.0.93"
+sqlx               = {version="0.6.2", features=["postgres", "all-types", "chrono", "runtime-tokio-rustls"]}
 thiserror          = "1.0.38"
-tokio              = {version = "1.25.0", features=["full"]}
-tower-http         = {version = "0.3.5", features=["trace"]}
+tokio              = {version="1.25.0", features=["full"]}
+tower-http         = {version="0.3.5", features=["trace"]}
 tracing            = "0.1.37"
 tracing-subscriber = {version="0.3.16", features=["env-filter"]}
 ulid               = "1.0.0"
