--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ axum               = "0.6.7"
 axum-macros        = "0.3.4"
 chrono             = {version="0.4.23", features = ["serde"]}
 hyper              = "0.14.24"
+jsonwebtoken       = "8.2.0"
 serde              = {version="1.0.152", features=["derive"]}
 serde_json         = "1.0.93"
 sqlx               = {version="0.6.2", features=["postgres", "all-types", "chrono", "runtime-tokio-rustls"]}
